# WIPReborn

./: .gitignore  CMakeLists.txt  README.md  desertex-revised.vssettings
data_modifier/imgui-master/: imgui_dock.cpp
data_modifier/imgui-master/examples/directx11_example/: directx11_example.vcxproj  directx11_example.vcxproj.filters  imgui_dock.ini  main.cpp
data_modifier/imgui-master/examples/directx11_example/RBMath/Inc/: Color32.h  Colorf.h  Matrix.h  Vector2.h  Vector3.h  Vector4.h
data_modifier/imgui-master/examples/directx11_example/RBMath/Inc/Platform/: RBBasedata.h
data_modifier/imgui-master/examples/directx11_example/RBMath/Src/: Color32.cpp
src/: Animation.cpp  Animation.h  AnimationClip.cpp  AnimationClip.h  AnimationEvent.cpp  AnimationEvent.h  AnimationManager.cpp  AnimationManager.h  AnimationQueue.cpp  AnimationQueue.h  AppManager.cpp  AppManager.h  AudioFmodSystem.cpp  AudioFmodSystem.h  AudioManager.cpp  AudioManager.h  Camera.cpp  Camera.h  Collider.cpp  D3D11ShaderResources.h  EditorMode.h  EventSystem.cpp  EventSystem.h  FileSystem.cpp  FileSystem.h  FmodInstance.h  FrameBox.cpp  FrameBox.h  GameComponent.cpp  GameComponent.h  IniHelper.cpp  IniHelper.h  Input.cpp  Input.h  InputManager.cpp  InputManager.h  KeyDefinetions.h  LinkList.h  Logger.cpp  Logger.h  (+50 more)
src/D3D11/: D3D11RHI.h
src/OpenGL/: OpenGLRHI.cpp  OpenGLRHI.h
src/Platform/: GLFWApp.cpp  GLFWApp.h  GlfwImguiRender.cpp  GlfwImguiRender.h  Win32D3D11.h  glfw_callbacks.cpp  glfw_callbacks.h
src/RBMath/: CMakeLists.txt
src/RBMath/Inc/: AABB.h  Axis.h  FFT.h  Plane.h  RBMathBase.h  RBMathUtilities.h
src/RBMath/Inc/Platform/: WindowsPlatformTemp.h
src/RBMath/Src/: Colorf.cpp  RBMathImpl.cpp
src/SoftR/: BaseShaderPS.h  BaseShaderVS.h  BufferBase.cpp  BufferBase.h  BufferConstant.cpp  BufferConstant.h  BufferIndex.cpp  BufferIndex.h  BufferUnorder.cpp  BufferUnorder.h  BufferVertex.cpp  BufferVertex.h  GPUMemory.h  InnerData.cpp  InnerData.h  Pipeline.cpp  Pipeline.h  Rasterizer.cpp  Rasterizer.h  SamplePoint.cpp  SamplePoint.h  SamplerBase.cpp  SamplerBase.h  ShaderBase.cpp  ShaderBase.h  ShaderGeometry.h  ShaderPixel.cpp  ShaderPixel.h  ShaderVertex.cpp  ShaderVertex.h  SimGPU.cpp  SimGPU.h  SimGPU_new.h  SoftRRHI.cpp  SoftRRHI.h  StageBase.cpp  StageBase.h  StageGS.cpp  StageGS.h  StageIA.cpp  (+25 more)
src/SoftR/Shader/: BaseShaderPS.h  BaseShaderVS.h
src/flyUI/: ActiveDrawableRect.cpp  ActiveDrawableRect.h  BasePanel.cpp  BasePanel.h  BaseWidget.cpp  BaseWidget.h  ButtonWidget.cpp  ButtonWidget.h  PictureWidget.cpp  PictureWidget.h  Readme.txt  ScrollerWidget.cpp  ScrollerWidget.h  StaticText.cpp  StaticText.h  SwitchWidget.cpp  SwitchWidget.h  TouchWidget.cpp  TouchWidget.h
src/thirdpart/Remotery/lib/: Remotery.h
src/thirdpart/glad/include/glad/: glad.h
src/thirdpart/glad/src/: glad.cpp
src/thirdpart/tiny-dnn-1.0.0a3/data/: d0.data  d0.model  d1.data  dt.data  dt1.data
src/thirdpart/tiny-dnn-1.0.0a3/examples/: main.cpp
src/thirdpart/tiny-dnn-1.0.0a3/vc/vc12/: tiny_cnn.vcxproj  tiny_cnn.vcxproj.filters
